# agent-poisoning

./: .env.example  .gitignore  BLOG.md  README.md  RESEARCH.md  defense_experiment.py  docker-compose.yml  flip_hardened_experiment.py  flip_hardened_multimodel.py  profile_trust_experiment.py  pyproject.toml  pyrightconfig.json
analysis/: analyze.py
configs/: lean_memory_fact_override.yaml  lean_memory_slow_burn.yaml  mem0_fact_override.yaml  mem0_slow_burn.yaml
data/defense_experiment/: run_20260627T140617.json  run_20260627T141136.json  run_20260627T154922.json  run_20260627T160024.json  run_20260627T161541.json
data/flip_hardened/: run_20260627T150806.json  run_20260627T151007.json  run_20260627T151235.json  run_20260627T162058.json  run_20260628T021016.json
data/profile_experiment/: run_20260627T132643.json  run_20260627T133921.json  run_20260627T155715.json
scripts/: daily_inject.sh
src/agent_poisoning/: __init__.py  analyze.py  cli.py  config.py  injector.py  logger.py  scheduler.py  schemas.py  scorer.py  trial.py  victim_agent.py
src/agent_poisoning/adapters/: __init__.py  base.py  lean_memory_adapter.py  mem0_adapter.py
src/agent_poisoning/attacks/: __init__.py  probes.py  registry.py
tests/: test_smoke.py
